--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
     "sass": "^1.83.1",
     "yup": "^1.6.1"
   },
