--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "sass": "^1.83.1",
+    "swiper": "^11.2.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
